Image path fixed

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <tr>
         <td>
           <img
-            src="/Users/courtoisfamily/Desktop/Web Dev App Brewery/App Brewery Web Development VS Code/HTML Personal Website/Leon Images/Leon Courtois Mock Pic.png"
+            src="Leon Images/Leon Courtois Mock Pic.png"
             alt="Leon Courtois profile picture"
           />
         </td>
